--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 Add new features:
+DOCS: ADD REACT EXAMPLE OF INTEGRATION IN A WEBSITE
 Sections as objects with 2 elements
     -sectiontitle
     -sectionurl
